# partition

./: .gitignore  CMakeLists.txt  README-important  SConscript  SConstruct
doc/: duplication.md
docs/: partitioner.md  partitioning.md
include/lsst/partition/: Chunker.h  ConfigStore.h  Csv.h  MapReduce.h  ObjectIndex.h
lib/: SConscript
src/: CMakeLists.txt  ChunkIndex.cc  ChunkReducer.cc  ChunkReducer.h  Chunker.cc  CmdLineUtils.cc  CmdLineUtils.h  ConfigStore.cc  Csv.cc  FileUtils.cc  FileUtils.h  Geometry.cc  HtmIndex.cc  InputLines.cc  MapReduce.h  ObjectIndex.cc  SConscript  SphDuplicate.cc  SphEstimateStats.cc  SphHtmIndex.cc  SphPartition.cc  SphPartitionMatches.cc  sph-duplicate.cc  sph-duplicate2.cc  sph-estimate-stats.cc  sph-htm-index.cc  sph-layout.cc  sph-partition-matches.cc  sph-partition.cc
tests/: SConscript  TempFile.h  chunkIndex.cc  configStore.cc  csv.cc  fileUtils.cc  geometry.cc  htmIndex.cc  mapReduce.cc  objectIndex.cc  vector.cc
ups/: partition.cfg  partition.table
